# PySYCL

./: .clang-format  .gitmodules  LICENSE  LICENSE.md  README.md
doc/: Doxyfile  Doxygen.tag  doxygen_mainpage.md
docs/: CNAME  conf.py  dev-guide.html  device.html  device_inquiry.html  device_queue.html  genindex.html  guide.html  index.html  index.rst  installation.html  modules.html  objects.inv  py-modindex.html  pysycl.html  script.js  search.html  searchindex.js  styles.css  user-guide.html  vector.html  vector_object.html
docs/.doctrees/: device.doctree  environment.pickle  index.doctree
docs/PySYCL_doc_html/: _device___py_bind___module_8cpp.html  _device___py_bind___module_8cpp__incl.map  _math___functions_8h.html  _math___functions_8h.js  _math___functions_8h__dep__incl.md5  _math___functions_8h_source.html  _s_y_c_l___device_8h.html  _s_y_c_l___device_8h__dep__incl.map  _s_y_c_l___device_8h__dep__incl.md5  _s_y_c_l___device_8h__incl.md5  _s_y_c_l___device_8h_source.html  _s_y_c_l___device___inquiry_8h.js  _s_y_c_l___device___inquiry_8h__dep__incl.map  _s_y_c_l___device___inquiry_8h__dep__incl.md5  _s_y_c_l___device___inquiry_8h__incl.map  _s_y_c_l___device___inquiry_8h_source.html  _vector___object_8h.html  _vector___object_8h__dep__incl.md5  _vector___object_8h__incl.map  _vector___object_8h__incl.md5  _vector___object_8h_source.html  _vector___operations_8h.html  _vector___operations_8h__dep__incl.md5  _vector___operations_8h_source.html  _vector___py_bind___module_8cpp.html  _vector___py_bind___module_8cpp__incl.map  _vector___py_bind___module_8cpp__incl.md5  _vector___py_bind___module_8cpp_source.html  annotated.html  annotated_dup.js  classes.html  classpysycl_1_1_s_y_c_l___device-members.html  classpysycl_1_1_s_y_c_l___device.html  classpysycl_1_1_vector___object-members.html  classpysycl_1_1_vector___object.html  classpysycl_1_1_vector___object.js  dir_000003_000001.html  dir_000004_000003.html  dir_01e0b522e8435f7e10a9574be04c4180.html  dir_19225156eb7ba052e31d1a736469917a.html  (+35 more)
docs/PySYCL_doc_xml/: _device___py_bind___module_8cpp.xml  _math___functions_8h.xml  _s_y_c_l___device_8h.xml  _s_y_c_l___device___inquiry_8h.xml  _vector___operations_8h.xml  classpysycl_1_1_s_y_c_l___device.xml  classpysycl_1_1_vector___object.xml  dir_01e0b522e8435f7e10a9574be04c4180.xml  dir_19225156eb7ba052e31d1a736469917a.xml  dir_36952e3bd5ad36c7251105e6d3531a74.xml  dir_6f915ed6a62459d3b8984ebedde764a7.xml  dir_8bdf02291321a12f5acf15f53263f542.xml  dir_98d6b44c4eb2e27a8f858243e072a7cf.xml  dir_9cb7131d0bc6daf4bd036f1363a8dea7.xml  dir_cd87c93172709878b87de1329503d87a.xml  dir_d5f32435cfcee249dfabff65c6eccc72.xml  dir_e68e8157741866f444e17edd764ebbae.xml  dir_f719714c5b803ee5b98ec58b2b92b003.xml  dir_fd61156e12edb609cd2eff23b78aa7b9.xml  group___math.xml  group___vector.xml  index.xml  namespacepysycl.xml
docs/PySYCL_doxygen_html/: _array1_d_8h.html  _array1_d_8h__dep__incl.dot  _array1_d_8h__incl.dot  _array1_d_8h_source.html  _array1_d___python___module_8cpp.html  _array1_d___python___module_8cpp__incl.dot  _array1_d___python___module_8cpp_source.html  _array1_d___python___module_8h.html  _array1_d___python___module_8h.js  _array1_d___python___module_8h__incl.dot  _array2_d_8h.html  (+332 more)
sphinx/: conf.py  guide.rst  index.rst  modules.rst  vector_object.rst
src/: CMakeLists.txt  Tester_Python.py
src/Array/: Array.h  Array_Python_Module.cpp  Array_Python_Module.h  CMakeLists.txt
src/Array1D/: Array1D.h  Array1D_Python_Module.cpp  Array1D_Python_Module.h  Array1D_Python_Tests.py  CMakeLists.txt
src/Array2D/: Array2D.h  Array2D_Base.h  Array2D_Explicit.h  Array2D_Explicit_Python_Module.h  Array2D_Explicit_Tests.py  Array2D_Object.h  Array2D_Operations.h  Array2D_Operations_Python_Module.h  Array2D_Operations_Shared_Tests.py  Array2D_PyBind_Module.cpp  Array2D_Python_Module.cpp  Array2D_Python_Module.h  Array2D_Python_Tests.py  Array2D_Shared.h  Array2D_Shared_Operations_Tests.py  Array2D_Shared_Python_Module.h  Array2D_Shared_Tests.py  CMakeLists.txt  Helper_Functions_Array2D.py  Helper_Functions_Array2D_Shared.py
src/Array2D/Array2D_Explicit/: Array2D_Explicit.h  Array2D_Explicit_Python_Module.h
src/Array2D/Array2D_Matrix_Multiplication/: Array2D_Matrix_Multiplication.h  Array2D_Matrix_Multiplication_Python_Module.h  Array2D_Matrix_Multiplication_Shared_Tests.py
src/Array2D/Array2D_Operations/: Array2D_Operations.h  Array2D_Operations_Python_Module.h  Array2D_Operations_Shared_Tests.py
src/Array2D/Array2D_Shared/: Array2D_Shared.h  Array2D_Shared_Python_Module.h
src/Array2D/Helper_Functions_Array2D/: Helper_Functions_Array2D.py  Helper_Functions_Array2D_Shared.py
src/CMake/: BuildType.cmake  Doxygen.cmake  PyBind11.cmake  PythonUnitTest.cmake  Sphinx.cmake
src/Data_Types/: CMakeLists.txt  Data_Types.h  Data_Types_Python_Module.cpp  Data_Types_Python_Module.h  Data_Types_Python_Tests.py
src/Device/: CMakeLists.txt  Device_Inquiry.h  Device_Inquiry_Python_Module.h  Device_Inquiry_Python_Tests.py  Device_Instance.h  Device_Instance_Python_Module.h  Device_Instance_Python_Tests.py  Device_Manager.h  Device_Manager_Python_Module.h  Device_Manager_Python_Tests.py  Device_Object.h  Device_Object_Python_Module.h  Device_PyBind_Module.cpp  Device_Python_Module.cpp  SYCL_Device.h  SYCL_Device_Inquiry.h  SYCL_Device_Inquiry_PyBind_Module.cpp  SYCL_Device_PyBind_Module.cpp
src/Linear_Algebra/: CMakeLists.txt  Linear_Algebra_Python_Module.cpp  Matrix_Multiplication.h  Matrix_Multiplication_Python_Module.h  Matrix_Multiplication_Python_Tests.py
src/Math/: Math_Functions.h
src/Matrix/: CMakeLists.txt  Matrix_Factories.h  Matrix_Factories_Python_Module.h  Matrix_Python_Module.cpp  Matrix_Python_Tests.py  Matrix_Type.h  Matrix_Type_Python_Module.h
src/Vector/: CMakeLists.txt  Vector_Factories.h  Vector_Factories_Python_Module.h  Vector_Object.h  Vector_Object_PyBind_Module.cpp  Vector_Operations.h  Vector_Operations_PyBind_Module.cpp  Vector_PyBind_Module.cpp  Vector_Python_Module.cpp  Vector_Python_Tests.py  Vector_Type.h  Vector_Type_Python_Module.h
(+416 files in other folders)
